--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
                         <h4>¡Suscribite a nuestro Newsletter!</h4>
                         <div class="etiquetas">
                             <label for="date" class="form-label">Fecha:</label>
-                            <input type="date">
+                            <input type="date" name="fecha">
                         </div>
                         <div class="etiquetas">
                             <label for="name" class="form-label" required>Nombre:</label>
-                            <input type="text">
+                            <input type="text" name="nombre">
                         </div>
                         <div class="etiquetas">
                             <label for="email" class="form-label" required>Email:</label>
-                            <input type="text">
+                            <input type="text" name="email">
                         </div>
                         <div class="etiquetas">
                             <label for="phone" class="form-label">Teléfono:</label>
-                            <input type="number">
+                            <input type="number" name="telefono">
                         </div>
                         <div>
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
