--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="cards">
             <div class="card">
                 <div>
-                    <h4 class="card-title">Información:</h4>
+                    <h4 class="card-title">Nuestra historia:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non blanditiis id assumenda impedit cumque, nam beatae, labore commodi excepturi ad voluptatibus fugiat facere consectetur. Nostrum accusantium illo corporis explicabo.</p>
                     <button href="#">Más información</button>
                 </div>
@@ -66,11 +66,11 @@
             <div class="contenedor-body">
                 <!-- HORARIOS -->
                 <div>
-                    <h4>Turnos Disponibles:</h4>
+                    <h4>Cupos Disponibles:</h4>
                     <table class="table">
                         <thead>
                         <tr>
-                            <th scope="col">Horario</th>
+                            <th scope="col">Turnos</th>
                             <th scope="col">Lunes</th>
                             <th scope="col">Martes</th>
                             <th scope="col">Miércoles</th>
@@ -113,21 +113,30 @@
                 </div>
 
                 <!-- NOVEDADES -->
-                <div>
-                    <div class="novedades">
-                        <h4>Novedades</h4>
+                <div class="novedades">
+                    <div class="card-novedad">
+                        <h4>Test Gatuno: ¿Cuánto conoces a tu gato?</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio dolores itaque recusandae repudiandae explicabo sunt natus rem quis blanditiis mollitia voluptatum voluptatem possimus impedit non, ratione placeat labore. Saepe, voluptatem.</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita possimus iure laborum voluptatum, laboriosam deleniti. Eius, voluptatum quas. Minus vero suscipit officiis quaerat aut omnis. Hic modi recusandae nulla omnis!</p>
+                        <button>Abrir nota</button>
+                    </div>
+                    <div class="card-novedad">
+                        <h4>Exámenes sanguíneos en perros</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
+                        <button>Abrir nota</button>
+                    </div>
+                    <div class="card-novedad">
+                        <h4>Un 65% de los animales domésticos...</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
+                    <button>Abrir nota</button>
                     </div>
                 </div>
-                <!-- FIN NOVEDADES -->
+                    <!-- FIN NOVEDADES -->
             </div>
-        <!-- FIN CUERPO -->
-        
-        <!-- FOOTER -->
-        <footer>
+            <!-- FIN CUERPO -->
+            
+            <!-- FOOTER -->
             <hr>
+        <footer>
                 <!-- FORMULARIO -->
                 <div class="newsletter">
                     <form
@@ -160,6 +169,11 @@
                     </form>
                 </div>
                 <!-- FIN FORMULARIO -->
+                <!-- MAPA -->
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26273.15522333088!2d-58.53383226296685!3d-34.60050984372218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7d17aecb4c5%3A0x2ec18aeefab8400!2sVilla%20Devoto%2C%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1729542967165!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <!-- FIN MAPA -->
         </footer>
     <!-- FIN FOOTER -->
     </body>
