--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>Locales</p>
             </div>
             <div class="buscador">
-                <input for="text"></inp>
+                <input for="text"></input>
                 <button>Buscar</button>
             </div>
         </div>
@@ -142,42 +142,42 @@
                 <div class="grilla">
                     <div class="grilla-item">
                         <h5>Cama para perro</h5>
-                        <img src="/img/CAMA PERRO.jpg" alt="cama-perro" style="width: 80px; height: 80px">
+                        <img src="/img/CAMA PERRO.jpg" alt="cama-perro">
                         <p>$45.000</p>
                     </div>
                     <div class="grilla-item">
                         <h5>Collar para gato</h5>
-                        <img src="/img/COLLAR GATO.jpg" alt="collar-gato" style="width: 80px; height: 80px">
+                        <img src="/img/COLLAR GATO.jpg" alt="collar-gato">
                         <p>$12.000</p>
                     </div>
                     <div class="grilla-item">
                         <h5>1KG Atún Gatuno</h5>
-                        <img src="/img/COMIDA GATO.jpg" alt="comida-gato" style="width: 80px; height: 80px">
+                        <img src="/img/COMIDA GATO.jpg" alt="comida-gato">
                         <p>$17.000</p>
                     </div>
                     <div class="grilla-item">
                         <h5>500G Sticks Perro</h5>
-                        <img src="/img/COMIDA PERRO.jpg" alt="comida-perro" style="width: 80px; height: 80px">
+                        <img src="/img/COMIDA PERRO.jpg" alt="comida-perro">
                         <p>$9.000</p>
                     </div>
                     <div class="grilla-item">
                         <h5>Juguete para perro</h5>
-                        <img src="/img/JUGUETE PERRO.jpg" alt="juguete-perro" style="width: 80px; height: 80px">
+                        <img src="/img/JUGUETE PERRO.jpg" alt="juguete-perro">
                         <p>$5.700</p>
                     </div>
                     <div class="grilla-item">
                         <h5>Rascador para gato</h5>
-                        <img src="/img/RASCADOR GATO.jpg" alt="rascador-gato" style="width: 80px; height: 80px">
+                        <img src="/img/RASCADOR GATO.jpg" alt="rascador-gato">
                         <p>$10.500</p>
                     </div>
                     <div class="grilla-item">
                         <h5>Plato mascota</h5>
-                        <img src="/img/TAZÓN.jpg" alt="plato" style="width: 80px; height: 80px">
+                        <img src="/img/TAZÓN.jpg" alt="plato">
                         <p>$6.000</p>
                     </div>
                     <div class="grilla-item">
                         <h5>Bolsa de transporte gatuna</h5>
-                        <img src="/img/BOLSO GATO.jpg" alt="bolsa-gato" style="width: 80px; height: 80px">
+                        <img src="/img/BOLSO GATO.jpg" alt="bolsa-gato">
                         <p>$30.000</p>
                     </div>
                 </div>
