--- a/index.html
+++ b/index.html
@@ -138,52 +138,54 @@
                 </div>
             <hr>
             <!-- PRODUCTOS -->
-            <div class="productos">
-                <h5>Algunos de nuestros productos</h5>
-                <p>Ver más...</p>
-            </div>
-            <div class="grilla">
-                <div class="grilla-item">
-                    <h5>Cama para perro</h5>
-                    <img src="/img/CAMA PERRO.jpg" alt="cama-perro">
-                    <p>$45.000</p>
+            <section>
+                <div class="productos">
+                    <h5>Algunos de nuestros productos</h5>
+                    <p>Ver más...</p>
                 </div>
-                <div class="grilla-item">
-                    <h5>Collar para gato</h5>
-                    <img src="/img/COLLAR GATO.jpg" alt="collar-gato">
-                    <p>$12.000</p>
+                <div class="grilla">
+                    <div class="grilla-item">
+                        <h5>Cama para perro</h5>
+                        <img src="/img/CAMA PERRO.jpg" alt="cama-perro">
+                        <p>$45.000</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>Collar para gato</h5>
+                        <img src="/img/COLLAR GATO.jpg" alt="collar-gato">
+                        <p>$12.000</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>1KG Atún Gatuno</h5>
+                        <img src="/img/COMIDA GATO.jpg" alt="comida-gato">
+                        <p>$17.000</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>500G Sticks Perro</h5>
+                        <img src="/img/COMIDA PERRO.jpg" alt="comida-perro">
+                        <p>$9.000</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>Juguete para perro</h5>
+                        <img src="/img/JUGUETE PERRO.jpg" alt="juguete-perro">
+                        <p>$5.700</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>Rascador para gato</h5>
+                        <img src="/img/RASCADOR GATO.jpg" alt="rascador-gato">
+                        <p>$10.500</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>Plato mascota</h5>
+                        <img src="/img/TAZÓN.jpg" alt="plato">
+                        <p>$6.000</p>
+                    </div>
+                    <div class="grilla-item">
+                        <h5>Bolsa de transporte gatuna</h5>
+                        <img src="/img/BOLSO GATO.jpg" alt="bolsa-gato">
+                        <p>$30.000</p>
+                    </div>
                 </div>
-                <div class="grilla-item">
-                    <h5>1KG Atún Gatuno</h5>
-                    <img src="/img/COMIDA GATO.jpg" alt="comida-gato">
-                    <p>$17.000</p>
-                </div>
-                <div class="grilla-item">
-                    <h5>500G Sticks Perro</h5>
-                    <img src="/img/COMIDA PERRO.jpg" alt="comida-perro">
-                    <p>$9.000</p>
-                </div>
-                <div class="grilla-item">
-                    <h5>Juguete para perro</h5>
-                    <img src="/img/JUGUETE PERRO.jpg" alt="juguete-perro">
-                    <p>$5.700</p>
-                </div>
-                <div class="grilla-item">
-                    <h5>Rascador para gato</h5>
-                    <img src="/img/RASCADOR GATO.jpg" alt="rascador-gato">
-                    <p>$10.500</p>
-                </div>
-                <div class="grilla-item">
-                    <h5>Plato mascota</h5>
-                    <img src="/img/TAZÓN.jpg" alt="plato">
-                    <p>$6.000</p>
-                </div>
-                <div class="grilla-item">
-                    <h5>Bolsa de transporte gatuna</h5>
-                    <img src="/img/BOLSO GATO.jpg" alt="bolsa-gato">
-                    <p>$30.000</p>
-                </div>
-            </div>
+            </section>
             <!-- FIN PRODUCTOS -->
             <!-- FIN CUERPO -->
             
