--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navegador">
                 <div class="secciones">
-                    <img src="./img/LOGO.png" alt="logo" width="60px" height="60px">
+                    <img src="./img/LOGO.png" alt="logo" width="50px" height="50px">
                     <p>Nosotros</p>
                     <p>Servicios</p>
                     <p>Locales</p>
@@ -22,6 +22,7 @@
                 <div class="buscador">
                     <input for="text">
                     <button>Buscar</button>
+                    <a href="./cart.html"><img src="./img/CART.png" alt="carrito" width="33px" height="33px"></a> 
                 </div>
             </div>
         </nav>
@@ -140,10 +141,10 @@
             <!-- PRODUCTOS -->
             <section>
                 <div class="productos">
-                    <h5>Algunos de nuestros productos</h5>
-                    <p>Ver más...</p>
+                    <h4>Algunos de nuestros productos:</h4>
+                    <a href="./productos.html"><p>Ver todos</p></a>
                 </div>
-                <div class="grilla">
+                <div class="grilla-inicio">
                     <div class="grilla-item">
                         <h5>Cama para perro</h5>
                         <img src="/img/CAMA PERRO.jpg" alt="cama-perro">
@@ -163,26 +164,6 @@
                         <h5>500G Sticks Perro</h5>
                         <img src="/img/COMIDA PERRO.jpg" alt="comida-perro">
                         <p>$9.000</p>
-                    </div>
-                    <div class="grilla-item">
-                        <h5>Juguete para perro</h5>
-                        <img src="/img/JUGUETE PERRO.jpg" alt="juguete-perro">
-                        <p>$5.700</p>
-                    </div>
-                    <div class="grilla-item">
-                        <h5>Rascador para gato</h5>
-                        <img src="/img/RASCADOR GATO.jpg" alt="rascador-gato">
-                        <p>$10.500</p>
-                    </div>
-                    <div class="grilla-item">
-                        <h5>Plato mascota</h5>
-                        <img src="/img/TAZÓN.jpg" alt="plato">
-                        <p>$6.000</p>
-                    </div>
-                    <div class="grilla-item">
-                        <h5>Bolsa de transporte gatuna</h5>
-                        <img src="/img/BOLSO GATO.jpg" alt="bolsa-gato">
-                        <p>$30.000</p>
                     </div>
                 </div>
             </section>
