--- a/cart.html
+++ b/cart.html
@@ -14,15 +14,13 @@
         <nav>
             <div class="navegador">
                 <div class="secciones">
-                    <img src="./img/LOGO.png" alt="logo" width="50px" height="50px">
-                    <p>Nosotros</p>
-                    <p>Servicios</p>
-                    <p>Locales</p>
+                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="50px" height="50px"></a>
                 </div>
                 <div class="buscador">
-                    <input for="text">
-                    <button>Buscar</button>
-                    <a href="./index.html"><button>Regresar</button></a>
+                    <div class="nav-botones">
+                        <button>Citas</button>
+                        <button>Servicios</button>
+                    </div>
                     <a href="./productos.html"><img src="./img/PRODUCTOS.png" alt="productos" width="45px" height="45px"></a> 
                 </div>
             </div>
