--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
         <nav>
             <div class="navegador">
                 <div class="secciones">
-                    <img src="./img/LOGO.png" alt="logo" width="50px" height="50px">
-                    <p>Nosotros</p>
-                    <p>Servicios</p>
-                    <p>Locales</p>
+                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="50px" height="50px"></a>
                 </div>
                 <div class="buscador">
-                    <input for="text">
-                    <button>Buscar</button>
-                    <a href="./cart.html"><img src="./img/CART.png" alt="carrito" width="33px" height="33px"></a> 
+                    <div class="nav-botones">
+                        <button>Citas</button>
+                        <button>Servicios</button>
+                    </div>
+                    <a href="./productos.html"><img src="./img/PRODUCTOS.png" alt="carrito" width="45px" height="45px"></a> 
                 </div>
             </div>
         </nav>
@@ -32,9 +31,8 @@
         <header>
             <div class="fondo-foto">
                 <div class="titulo">
-                    <h1>PET CARE</h1>
-                    <h5>Atención especial para tus mascotas</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum porro dolorum excepturi sequi quam quia omnis, alias quas aliquam autem dolor modi laudantium eaque natus recusandae id inventore ab.</p>
+                    <h1>PETCARE VETERINARIA</h1>
+                    <p>Este es un espacio dedicado al bienestar de las mascotas, donde se combinan la pasión por los animales y la profesionalidad. Ofrecen servicios como consultas médicas, vacunación, cirugías menores, y asesoramiento nutricional. Además, cuentan con una amplia gama de productos, desde alimentos balanceados hasta accesorios, asegurando que cada cliente encuentre todo lo necesario para cuidar a su compañero. Con un equipo de expertos comprometidos, brindan un trato cálido y personalizado que garantiza la salud y felicidad de cada mascota.</p>
                 </div>
             </div>
             <!-- CARDS -->
@@ -42,26 +40,25 @@
                 <div class="card">
                     <div>
                         <h4 class="card-title">Nuestra historia:</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non blanditiis id assumenda impedit cumque, nam beatae, labore commodi excepturi ad voluptatibus fugiat facere consectetur. Nostrum accusantium illo corporis explicabo.</p>
-                        <button href="#">Más información</button>
+                        <p>Nacimos hace más de 5 años como un pequeño proyecto familiar motivado por el amor a los animales y el deseo de mejorar su calidad de vida. Inició en un local modesto, atendiendo a vecinos y sus mascotas, pero gracias a la dedicación y confianza de la comunidad, creció rápidamente. Hoy en día, es un centro de referencia, equipado con tecnología moderna y un equipo altamente capacitado, que sigue manteniendo los mismos valores de cercanía y cuidado que la vieron nacer.</p>
                     </div>
                 </div>
                 <div class="sizecard">                
                     <img src="img/SALUD.png" alt="salud">
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptatibus molestiae tempora doloremque! Consequuntur reiciendis ipsa atque. Nisi ab, ex ad, vero non dignissimos possimus animi illum natus accusamus sit?</p>
+                        <p>Nos dedicamos a proporcionar cuidados integrales para garantizar la salud y el bienestar de las mascotas. Desde chequeos médicos y vacunación hasta asesoramiento en nutrición, cada servicio está diseñado para atender las necesidades específicas de cada animal. Nuestro enfoque combina profesionalismo y cariño, creando un entorno seguro y acogedor para que las mascotas se sientan cómodas en todo momento.</p>
                     </div>
                 </div>
                 <div class="sizecard">
                     <img src="img/CUIDADOS.png" alt="cuidados">
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptatibus molestiae tempora doloremque! Consequuntur reiciendis ipsa atque. Nisi ab, ex ad, vero non dignissimos possimus animi illum natus accusamus sit?</p>
+                        <p>Ofrecemos servicios de peluquería canina y gatuna, diseñados para mantener a las mascotas limpias, saludables y con un aspecto impecable, utilizando productos de calidad y técnicas adaptadas a cada especie. Además, contamos con atención para emergencias, disponible para brindar asistencia inmediata en situaciones críticas, asegurando el cuidado y bienestar de las mascotas en momentos inesperados.</p>
                     </div>
                 </div>
                 <div class="sizecard">
                     <img src="img/CHAT.png" alt="chat">
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptatibus molestiae tempora doloremque! Consequuntur reiciendis ipsa atque. Nisi ab, ex ad, vero non dignissimos possimus animi illum natus accusamus sit?</p>
+                        <p>Facilitamos la comunicación con nuestros clientes mediante un sistema de atención a través de WhatsApp. Este método permite agendar citas, realizar consultas rápidas y recibir orientación personalizada de manera práctica y eficiente. Nuestro objetivo es estar siempre al alcance, brindando un servicio ágil y cercano para satisfacer las necesidades de las mascotas y sus dueños.</p>
                     </div>
                 </div>
             </div>
@@ -70,8 +67,8 @@
         <main>
             <div class="contenedor-body">
                 <!-- HORARIOS -->
-                <div>
-                    <h4>Cupos Disponibles:</h4>
+                <div class="horarios">
+                    <h4>Grilla de horarios:</h4>
                     <table class="table">
                         <thead>
                         <tr>
@@ -114,24 +111,28 @@
                         </tr>
                         </tbody>
                     </table>
-                <!-- FIN HORARIOS -->
+                    <br>
+                    <div class="nav-botones">
+                        <button>Reservá tu cita</button>
+                    </div>
+                    <!-- FIN HORARIOS -->
                 </div>
 
                 <!-- NOVEDADES -->
                 <div class="novedades">
                     <div class="card-novedad">
                         <h4>Test Gatuno: ¿Cuánto conoces a tu gato?</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
+                        <p>Recientemente, expertos en comportamiento animal han desarrollado tests interactivos diseñados para que los dueños puedan conocer mejor la personalidad y necesidades de sus gatos. Estas pruebas evalúan aspectos como su nivel de sociabilidad, preferencias de juego y reacciones a diferentes estímulos[...]</p>
                         <button>Abrir nota</button>
                     </div>
                     <div class="card-novedad">
                         <h4>Exámenes sanguíneos en perros</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
+                        <p>Una nueva generación de exámenes sanguíneos para perros está revolucionando la medicina veterinaria, permitiendo detectar enfermedades de manera más temprana y precisa. Estas pruebas avanzadas pueden identificar condiciones como diabetes, problemas renales, problemas cardiácos y enfermedades infecciosas[...]</p>
                         <button>Abrir nota</button>
                     </div>
                     <div class="card-novedad">
                         <h4>Un 65% de los animales domésticos...</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quidem quasi corrupti velit officia eos quis, inventore ratione itaque voluptates ducimus laudantium voluptatibus sunt in! Nobis ipsa omnis harum ipsam.</p>
+                        <p>Un reciente estudio destaca que el 65% de los animales domésticos gozan de una salud adecuada gracias a los esfuerzos de sus dueños por brindarles una alimentación balanceada y cuidados preventivos. Esta cifra refleja el creciente compromiso de las familias por mejorar la calidad de vida de sus mascotas[...]</p>
                     <button>Abrir nota</button>
                     </div>
                 </div>
