--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <!-- NAVEGACIÓN. -->
         <nav>
             <div class="navegador">
-                <div class="secciones">
-                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="50px" height="50px"></a>
+                <div class="logo">
+                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="65px" height="65px"></a>
+                    <h4>PetCare Veterinaria</h4>
                 </div>
                 <div class="buscador">
                     <div class="nav-botones">
@@ -31,7 +32,7 @@
         <header>
             <div class="fondo-foto">
                 <div class="titulo">
-                    <h1>PETCARE VETERINARIA</h1>
+                    <h1>¡Bienvenido a tu veterinaria favorita!</h1>
                     <p>Este es un espacio dedicado al bienestar de las mascotas, donde se combinan la pasión por los animales y la profesionalidad. Ofrecen servicios como consultas médicas, vacunación, cirugías menores, y asesoramiento nutricional. Además, cuentan con una amplia gama de productos, desde alimentos balanceados hasta accesorios, asegurando que cada cliente encuentre todo lo necesario para cuidar a su compañero. Con un equipo de expertos comprometidos, brindan un trato cálido y personalizado que garantiza la salud y felicidad de cada mascota.</p>
                 </div>
             </div>
