--- a/productos.html
+++ b/productos.html
@@ -13,8 +13,9 @@
         <!-- NAVEGACIÓN. -->
         <nav>
             <div class="navegador">
-                <div class="secciones">
-                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="50px" height="50px"></a>
+                <div class="logo">
+                    <a href="./index.html"><img src="./img/LOGO.png" alt="logo" width="65px" height="65px"></a>
+                    <h4>PetCare Veterinaria</h4>
                 </div>
                 <div class="buscador">
                     <div class="nav-botones">
@@ -28,10 +29,9 @@
         <!-- FIN NAVEGACIÓN. -->
 
         <header>
-            <div class="listado">
+            <div class="listado" id="productos">
                 <h4>Carrito de compras</h4>
-                <div id="carritoData" class="contenido">
-                </div>
+                <div id="carritoData" class="contenido"></div>
                 <div>
                     <button id="btnPagar" onclick="pagar()">Pagar</button>
                     <button id="btnLimpiar" onclick="limpiar()">Vaciar Carrito</button>
