--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Pet Care Veterinaria</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     </head>
     
@@ -19,8 +19,8 @@
                 </div>
                 <div class="buscador">
                     <div class="nav-botones">
-                        <button>Citas</button>
-                        <button>Servicios</button>
+                        <a href="./citas.html"><button>Citas</button></a>
+                        <a href="./servicios.html"><button>Servicios</button></a>
                     </div>
                     <a href="./productos.html"><img src="./img/PRODUCTOS.png" alt="carrito" width="45px" height="45px"></a> 
                 </div>
