--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </table>
                     <br>
                     <div class="nav-botones">
-                        <button>Reservá tu cita</button>
+                        <a href="./servicios.html"><button>Reservá tu cita</button></a>
                     </div>
                     <!-- FIN HORARIOS -->
                 </div>
@@ -144,7 +144,6 @@
             <section>
                 <div class="productos">
                     <h4>Algunos de nuestros productos:</h4>
-                    <a href="./productos.html"><p>Ver todos</p></a>
                 </div>
                 <div class="grilla-inicio">
                     <div class="grilla-item">
@@ -167,6 +166,9 @@
                         <img src="/img/COMIDA PERRO.jpg" alt="comida-perro">
                         <p>$9.000</p>
                     </div>
+                </div>
+                <div class="listado">
+                    <a href="./productos.html"><button>Ver todos</button></a>
                 </div>
             </section>
             <!-- FIN PRODUCTOS -->
