--- a/citas.html
+++ b/citas.html
@@ -37,7 +37,7 @@
             <div class="contenedor-compra">
                 <div class="listado">
                     <h4 style="margin-bottom: 10px;">Ingresa tus datos</h4>
-                    <form id="formulario" action="https://formspree.io/f/xzzbqglr" method="post" class="formulario">
+                    <form id="formulario" action="https://formspree.io/f/mnnqyrrg" method="post" class="formulario">
                         <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
                         <input type="text" id="apellido" name="apellido" placeholder="Apellido" required>
                         <input type="phone" id="numero" name="phone" placeholder="Teléfono" required>
